<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".View.InputActivity"
    android:scrollbars="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="I Am Thankful For:"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <EditText
        android:id="@+id/entry1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="I AM THANKFUL FOR ....1"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="I Am Thankful For:"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <EditText
        android:id="@+id/entry2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="I AM THANKFUL FOR ....2"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="I Am Thankful For:"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <EditText
        android:id="@+id/entry3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="I AM THANKFUL FOR ....3"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="I Am Thankful For:"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <EditText
        android:id="@+id/entry4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="I AM THANKFUL FOR ....4"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="I Am Thankful For:"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <EditText
        android:id="@+id/entry5"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="I AM THANKFUL FOR ....5"
        android:inputType="text" />

    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Days:"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <NumberPicker
        android:id="@+id/number_picker_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </NumberPicker>


</LinearLayout>